Fixes to get server running on my mac

--- a/src/MiNET/MiNET.Console/server.conf
+++ b/src/MiNET/MiNET.Console/server.conf
@@ -1,7 +1,7 @@
 ﻿#DO NOT REMOVE THIS LINE - MiNET Config
 
-#UseEncryption=false
-#UseEncryptionForAll=true
+UseEncryption=false
+UseEncryptionForAll=false
 #ForceOrderingForAll=false
 #ForceXBLAuthentication=false
 
@@ -36,7 +36,7 @@ PluginDirectory=../../../../TestPlugin/bin/Debug/netcoreapp2.1;../../../../MiNET
 
 #PluginDisabled=true
 NiceLobby.Enabled=false
-CoreCommands.Enabled=false
+CoreCommands.Enabled=true
 Plotter.Enabled=false
 SurvivalCraft.Enabled=false
 BuilderBase.Enabled=false
